Fix margin spacing on form

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,10 @@ h1 {
     margin: 0;
 }
 
+h2 {
+  margin:0;
+}
+
 main {
     margin: 0;
     padding: 0;
